Regsistration mail implemented. Secrets implemented, AWS config.