@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -70,7 +71,7 @@ public class BasketServiceImpl implements BasketService {
                     product.setQuantity(basket.getQuantity());
                     return product;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
